tests/ui/not_eq_relation.stderr
error[E0277]: the trait bound `f64: std::cmp::Eq` is not satisfied
   --> tests/ui/not_eq_relation.rs:8:15
    |
8   |     struct Ok(f64);
    |            -- ^^^ the trait `std::cmp::Eq` is not implemented for `f64`
    |            |
    |            in this derive macro expansion
    |
note: required by a bound in `AssertParamIsEq`
   --> $RUST/core/src/cmp.rs
    |
    | pub struct AssertParamIsEq<T: Eq + ?Sized> {
    |                               ^^ required by this bound in `AssertParamIsEq`
    = note: this error originates in the derive macro `::core::cmp::Eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: Hash` is not satisfied
 --> tests/ui/not_eq_relation.rs:8:15
  |
8 |     struct Ok(f64);
  |            -- ^^^ the trait `Hash` is not implemented for `f64`
  |            |
  |            in this derive macro expansion
  |
  = note: this error originates in the derive macro `::core::hash::Hash` (in Nightly builds, run with -Z macro-backtrace for more info)
